# homeworkcsv

./: .gitignore  README.md  pyproject.toml
src/homeworkcsv/: data_reader.py  main.py
src/homeworkcsv/reports/: __init__.py  performance.py
tests/: test_data_reader.py  test_performance.py  test_reports.py
