[project]
name = "homeworkcsv"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tabulate (>=0.9.0,<0.10.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "black (>=25.11.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "homeworkcsv", from = "src" },
]

[tool.poetry.scripts]
homeworkcsv = "homeworkcsv.main:main"